# semesterthesis

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md
20_code/: .dockerignore  .env.example  CLAUDE.md  README.md  project_rules.md  pyproject.toml  requirements-dev.txt  requirements.txt  semesterthesis_3-12.yaml
20_code/00_development_documentation/: ARCHITECTURE.md  architecture_decisions.md  implementation_roadmap.md
20_code/10_verifiers/: README.md
20_code/20_antigravity_scripts/: README.md
20_code/30_docker/: Dockerfile  README.md  docker-compose.yml
20_code/40_backend/: README.md
20_code/40_backend/app/: __init__.py  config.py  errors.py  logging_config.py  main.py
20_code/40_backend/tests/: test_abaqus_writer.py  test_analysis.py  test_api.py  test_block_mesh.py  test_database.py  test_din3990.py  test_errors.py  test_from_parameters.py  test_generation.py  test_geometry.py  test_gmsh_mesher.py  test_health.py  test_implicit_deck.py  test_ingest.py  test_inp.py  test_iso6336.py  test_iso6336_dynamics.py  test_iso6336_flank_strength.py  test_iso6336_root_strength.py  test_loaddist_distribution.py  test_loaddist_forces.py  test_loaddist_shaft.py  test_mapped_mesher.py  test_materials.py  test_mesh_sets.py  test_rexs.py  test_rie.py  test_ste.py  test_storage_local.py  test_structured_mesher.py  test_tolerances.py  (+5 more)
20_code/50_frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
20_code/60_references_other_programs/: README.md
(+108 files in other folders)
